--- a/OxFordCOVID-19DataExploration.Rmd
+++ b/OxFordCOVID-19DataExploration.Rmd
@@ -294,7 +294,7 @@ library(lmtest)
 library(car)
 
 
-# LRun inear Regression model without removing outliers. 3 variables are statistically significant, but only 1 of them are closing to '0', two others are greater than 0.01.
+# Run Linear Regression model without removing outliers. 3 variables are statistically significant, but only 1 of them are closing to '0', two others are greater than 0.01.
 df_flat_model<-lm(DeathRate ~ S1_School.closing+S2_Workplace.closing+S3_Cancel.public.events+S4_Close.public.transport+S5_Public.information.campaigns+S6_Restrictions.on.internal.movement+S7_International.travel.controls, data=df_flat )
 summary(df_flat_model)
 residualPlots(df_flat_model)
