--- a/OxFordCOVID-19DataExploration.Rmd
+++ b/OxFordCOVID-19DataExploration.Rmd
@@ -51,75 +51,71 @@ https://www.bsg.ox.ac.uk/sites/default/files/2020-04/BSG-WP-2020-031-v4.0_0.pdf
 
 ## Data Exploration
 ### Read File
-Read file in.Noticed it has a lot of "Notes" columns used to supply source of change in variable.
+Read file in. Noticed it has a lot of "Notes" columns used to supply source of change in variable. The "General" columns indicate whether measure is geographically targeted or general.
 
 ```{r ,}
+# read the csv into a dataframe
 data = read.csv("OxCGRT_Download_080420_161822_Full.csv")
+
+# see columns in data
 names(data)
 ```
 
 
 
-#### Get Top 30 Countries
-Top 30 is based on the number of Confirmed Cases on 04-08-2020. This can be modified.
+#### Get Top Countries
+Top number of countries is based on the number of Confirmed Cases on 04-08-2020. This can be modified if data is updated.
 ```{r ,}
-# look at the rows with the date 2020-04-08
-data_0408 = subset(data, data$Date == 20200408)
+# number countries interested in
+num_c = 30
+# date evaluated
+e_date = 20200408
+
+# look at the rows with the evaluation date
+data_eval = subset(data, data$Date == e_date)
 # order data in descending order based on num cases and deaths
-data_0408 = data_0408[order(-data_0408$ConfirmedCases, -data_0408$ConfirmedDeaths),]
-# data_04 = data_0408[data_0408$ConfirmedCases > 0,]
-# data_04 = data_04[, c('CountryName', 'ConfirmedCases')]
-# str(data_04)
-# top = head(data_04,30)
-# top$CountryName = factor(top$CountryName)
-# str(top)
-# print(top)
-# print(data_04$ConfirmedCases)
-# print(levels(factor(data_0408$CountryName)))
-
-
+data_eval = data_eval[order(-data_eval$ConfirmedCases, -data_eval$ConfirmedDeaths),]
 # take the levels of first 30 rows of the CountryName column
-top30 = levels(factor(head(data_0408,30)$CountryName))
+top = levels(factor(head(data_eval,num_c)$CountryName))
 
-top30
+top
 ```
 
-#### Filter data to only include Top 30 Countries
+#### Filter data to only include Top Countries
 ```{r ,}
-# take the subset of data related to top 30 countries
-df_top30 = subset(data, CountryName %in% top30)
-df_top30 = subset(df_top30, df_top30$Date <= 20200408)
+# take the subset of data related to top countries
+df_top = subset(data, CountryName %in% top)
+df_top = subset(df_top, df_top$Date <= e_date)
 # drop unused levels from all factors
-df_top30[] = lapply(df_top30, function(x) if(is.factor(x)) factor(x) else x)
+df_top[] = lapply(df_top, function(x) if(is.factor(x)) factor(x) else x)
+df = df_top
 ```
 
 #### Separate or remove excess columns
 The Notes and General columns do not pertain to our prediction model. We will also only be using the Display Stringency Index as it is more complete.
 ```{r ,}
 # find columns with Notes or General in name
-Notes = c(grep( "Notes" , names( df_top30 ) ))
-General = c(grep( "General" , names( df_top30 ) ))
+Notes = c(grep( "Notes" , names( df) ))
+General = c(grep( "General" , names( df) ))
 # save notes and general as separate df's
-df_notes = subset(df_top30, select = Notes )
-df_general = subset( df_top30, select = General )
+df_notes = subset(df, select = Notes )
+df_general = subset( df, select = General )
 # remove notes and general columns from main df
-df_top30 = subset( df_top30, select = -c(Notes, General))
+df = subset( df, select = -c(Notes, General))
 
-# remove duplicate stringency index
-df_top30 = subset(df_top30, select = -c(StringencyIndex))
+# remove duplicate stringency index and X column
+df = subset(df, select = -c(StringencyIndex, X))
 
-str(df_top30)
-summary(df_top30)
-df = df_top30
+str(df)
+summary(df)
+
 ```
 
 #### Deal with NAs and NULLs
-For most if not all measures, NA or NULL values were replaced with the most recent non-zero value for that country when possible, else zero
+Since values are dependent per country, there was little general NA cleaning we could do. More cleaning was done per country.
 ```{r ,}
-# need to figure out how to make these take last non-zero value
-df$ConfirmedCases[df$Date == 20200101 & is.na(df$ConfirmedCases)] <- 0
-
-
+# make all January 1st values zero if NA
+df[df$Date == 20200101 & is.na(df)] <- 0
 
 ```
 
@@ -128,25 +124,25 @@ Data includes targeted and general measures. Should we be treating them differen
 ```{r ,}
 #
 
-
 ```
 
-#### Converting Date Format
+#### Convert Date Column to Date Format
+Date column is in integer format, we converted it to date format to be able to find differences between dates.
 ```{r ,}
 # turn date column into date format
 df$Date <- as.Date(as.character(df$Date),"%Y%m%d")
 ```
 
 ### Flatten Data
-#### Separate Flattening Columns
-Some columns are informational and do not need to be flattened. Some measures need to be summed to that point. Others can just take the face value?
+#### Separate Columns
+Some measures need to be summed to that point (measures). Others can just be taken at the face value rather than cumulative (info).
 ```{r ,}
-info = c("Date", "CountryName", "CountryCode", "ConfirmedCases", "ConfirmedDeaths") #, "StringencyIndexForDisplay", "X")
+info = c("Date", "CountryName", "CountryCode", "ConfirmedCases", "ConfirmedDeaths") #, "StringencyIndexForDisplay")
 measures = names(df)[!(names(df) %in% info)]
-measures
+#measures
 ```
 
-Flatten Data into new DataFrame
+#### Create Empty Dataframe to input new information
 ```{r ,}
 # create empty data frame
 df_flat <- data.frame(Date=as.Date(character()),
@@ -175,83 +171,51 @@ str(df_flat)
 ```
 
 
+#### Flatten Data
 ```{r ,}
-## FLATTENING FOR ONE Country to debug only 
-# for each country in the top 30
-# for (country in top30) {
-#   # subset of data only for that country
-#   df_country = subset(df, CountryName == country)
-#   cc = levels(factor(df_country$CountryCode))
-#   print(country)
-#   if (country == "China"){
-#     
-#     #Take care of null values for Confirmed Cases
-#     df_country$ConfirmedCases = na.locf(with(df_country, ifelse(df_country$ConfirmedCases == 'NA', NA_real_, df_country$ConfirmedCases)), fromLast = FALSE)
-#     
-#     x = Position(function(x) x > 100, df_country$ConfirmedCases) - 1
-#     df_country_reset = tail(df_country, -x)
-#     c_dates = sort(unique(df_country_reset$Date, incomparables = FALSE))
-#     c_dates = c_dates[seq(1, length(c_dates), 7)]
-#     for (d in seq_along(c_dates)){
-#       print(c_dates[d])
-#       df_date = subset(df_country_reset, Date <= c_dates[d])
-#       cols = colSums(df_date[measures], na.rm = TRUE)
-#        
-#       df_flat <- rbind(df_flat, data.frame(Date = c_dates[d],
-#                       Day = as.integer(c_dates[d]-c_dates[1]),
-#                        CountryName = country,
-#                        CountryCode = cc,
-#                        S1_School.closing = as.integer(cols['S1_School.closing']),
-#                        S2_Workplace.closing = as.integer(cols['S2_Workplace.closing']),
-#                        S3_Cancel.public.events = as.integer(cols['S3_Cancel.public.events']),
-#                        S4_Close.public.transport = as.integer(cols['S4_Close.public.transport']),
-#                        S5_Public.information.campaigns = as.integer(cols['S5_Public.information.campaigns']),
-#                        S6_Restrictions.on.internal.movement = as.integer(cols['S6_Restrictions.on.internal.movement']),
-#                        S7_International.travel.controls = as.integer(cols['S7_International.travel.controls']),
-#                        S8_Fiscal.measures = cols['S8_Fiscal.measures'],
-#                        S9_Monetary.measures = cols['S9_Monetary.measures'],
-#                        S10_Emergency.investment.in.health.care = cols['S10_Emergency.investment.in.health.care'],
-#                        S11_Investment.in.Vaccines = cols['S11_Investment.in.Vaccines'],
-#                        S12_Testing.framework = as.integer(cols['S12_Testing.framework']),
-#                        S13_Contact.tracing = as.integer(cols['S13_Contact.tracing']),
-#                        StringencyIndexForDisplay = cols['StringencyIndexForDisplay'],
-#                        ConfirmedCases = as.integer(df_date$ConfirmedCases[df_date$Date == c_dates[d]]),
-#                        ConfirmedDeaths = as.integer(df_date$ConfirmedDeaths[df_date$Date == c_dates[d]])))
-#     }
-#   }
-# }
-# 
-# str(df_flat)
+# day zero limit
+limit = 100
 
-```
+# interval between dates captured
+interval = 3
 
-###### 
-```{r ,}
-## FLATTENING FOR ALL 
-# some countries have an issue here...working on it
+
+# library needed to back fill NA values
 library(zoo)
-# for each country in the top 30
-for (country in top30) {
+
+# for each country in the top list
+for (country in top) {
   # subset of data only for that country
   df_country = subset(df, CountryName == country)
+  # get the country code for that country
   cc = levels(factor(df_country$CountryCode))
-  print(country)
   
+  # fill NA values with last non-NA value for that country
   df_country$ConfirmedCases = na.locf(with(df_country, ifelse(df_country$ConfirmedCases == 'NA', NA_real_, df_country$ConfirmedCases)), fromLast = FALSE)
+  df_country$ConfirmedDeaths = na.locf(with(df_country, ifelse(df_country$ConfirmedDeaths == 'NA', NA_real_, df_country$ConfirmedDeaths)), fromLast = FALSE)
 
-  x = Position(function(x) x > 0, df_country$ConfirmedCases)
+  # find zero-th day (when cases first >= limit)
+  x = Position(function(x) x > limit, df_country$ConfirmedCases)
+  
+  # remove any data prior to zero-th day
   df_country_reset = tail(df_country, -x)
-  c_dates = sort(unique(df_country_reset$Date, incomparables = FALSE))
-  c_dates = c_dates[seq(1, length(c_dates), 7)]
-  print(c_dates[1])
-  for (d in seq_along(c_dates)){
-    #print(c_dates[d])
-    df_date = subset(df_country_reset, Date <= c_dates[d])
+  
+  # find dates to extract data from based on interval chosen
+  dates = sort(unique(df_country_reset$Date, incomparables = FALSE))
+  dates = dates[seq(1, length(dates), interval)]
+  
+  # for every date of interest
+  for (d in seq_along(dates)){
+    
+    # subset of data only prior to date of interest
+    df_date = subset(df_country_reset, Date <= dates[d])
+    
+    # cumulate the measures
     cols = colSums(df_date[measures], na.rm = TRUE)
 
-    # add date and country to dataframe
-    df_flat <- rbind(df_flat, data.frame(Date = c_dates[d],
-                    Day = as.integer(c_dates[d]-c_dates[1]),
+    # add data for specified date and country to dataframe
+    df_flat <- rbind(df_flat, data.frame(Date = dates[d],
+                    Day = as.integer(dates[d]-dates[1]),
                      CountryName = country,
                      CountryCode = cc,
                      S1_School.closing = as.integer(cols['S1_School.closing']),
@@ -268,10 +232,9 @@ for (country in top30) {
                      S12_Testing.framework = as.integer(cols['S12_Testing.framework']),
                      S13_Contact.tracing = as.integer(cols['S13_Contact.tracing']),
                      StringencyIndexForDisplay = cols['StringencyIndexForDisplay'],
-                     ConfirmedCases = as.integer(df_date$ConfirmedCases[df_date$Date == c_dates[d]]),
-                     ConfirmedDeaths = as.integer(df_date$ConfirmedDeaths[df_date$Date == c_dates[d]])))
+                     ConfirmedCases = as.integer(df_date$ConfirmedCases[df_date$Date == dates[d]]),
+                     ConfirmedDeaths = as.integer(df_date$ConfirmedDeaths[df_date$Date == dates[d]])))
   }
-
 }
 
 str(df_flat)
@@ -279,19 +242,19 @@ str(df_flat)
 ```
 
 ```{r}
-### We do our prediction based on the data on 20200408
-df_20200408<-subset(data,select=c("CountryName","Date","ConfirmedCases","ConfirmedDeaths"))
-df_20200408<-subset(df_20200408,Date=="20200408")
-df_20200408$DeathRate<-round(df_20200408$ConfirmedDeaths/df_20200408$ConfirmedCases,3)
-str(df_20200408)
-install.packages("lubridate")
-library(lubridate)
-df_20200408$Date<- ymd(df_20200408[, 2]) #Converting integer to date formate
-
-### Try to create some variables showing how many days those countries have closed schools, governments and workplace. TBC.
-library(dplyr)
-df_school<-subset(data,select="CountryName")
-df_school$CloseSchool<-ifelse(data$S1_School.closing==2,data$Date,NA)
+# ### We do our prediction based on the data on 20200408
+# df_20200408<-subset(data,select=c("CountryName","Date","ConfirmedCases","ConfirmedDeaths"))
+# df_20200408<-subset(df_20200408,Date=="20200408")
+# df_20200408$DeathRate<-round(df_20200408$ConfirmedDeaths/df_20200408$ConfirmedCases,3)
+# str(df_20200408)
+# install.packages("lubridate")
+# library(lubridate)
+# df_20200408$Date<- ymd(df_20200408[, 2]) #Converting integer to date formate
+# 
+# ### Try to create some variables showing how many days those countries have closed schools, governments and workplace. TBC.
+# library(dplyr)
+# df_school<-subset(data,select="CountryName")
+# df_school$CloseSchool<-ifelse(data$S1_School.closing==2,data$Date,NA)
 
 
 ```
